# veo-social-app

./: .gitignore  CONTRIBUTING.md  LICENSE  PHASE5_COMMUNITY_COMPLETE.md  README.md  SECURITY.md  firebase.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
app/: .env.example  README.md  pubspec.yaml
app/android/app/: build.gradle  google-services_template.json
app/lib/: app_router.dart  firebase_options_template.dart  main.dart
app/lib/core/: auth_service.dart  env.dart  feed_display_preferences.dart  logger.dart  remote_config.dart  theme.dart  theme_controller.dart  usage_limits_service.dart  video_cache_manager.dart
app/lib/data/: profile_service.dart
app/lib/data/api/: myway_api.dart
app/lib/data/dto/: feed_item_dto.dart
app/lib/data/repository/: feed_repository.dart
app/lib/features/about/: about_page.dart
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/models/: schemas.py
backend/src/services/: feed.py  generation.py  mocks.py  moderation.py  profile.py  prompt_utils.py  pubsub_client.py  reco.py  storage.py  store.py  store_firestore.py  vertex.py  worker.py
backend/src/tests/: test_feed.py  test_health.py  test_privacy.py  test_prompt_utils.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COSTS.md  README.md  SETUP.md
infra/: README.md
infra/infra/: cloudrun.sh  firestore.indexes.json  firestore.rules  storage.rules
infra/infra/seed/: seed_posts.json  seed_runner.py  seed_users.json
(+18 files in other folders)
